packages/wasm/src/tests/snapshots/wasm__tests__partition__clean_table_chunks.snap
---
source: packages/wasm/src/tests/partition.rs
expression: summarize(&render.chunks)
---
[
  {
    "range": [
      0,
      57
    ],
    "items": 30,
    "width": 14.09,
    "height": 63.24,
    "x": -0.5,
    "y": -0.5
  },
  {
    "range": [
      59,
      84
    ],
    "items": 8,
    "width": 56.8,
    "height": 159.84,
    "x": 0.0,
    "y": 103.84
  },
  {
    "range": [
      85,
      110
    ],
    "items": 5,
    "width": 35.12,
    "height": 90.48,
    "x": -0.16,
    "y": 282.88
  },
  {
    "range": [
      111,
      136
    ],
    "items": 8,
    "width": 8.4,
    "height": 159.84,
    "x": 0.0,
    "y": 392.56
  },
  {
    "range": [
      137,
      160
    ],
    "items": 9,
    "width": 56.8,
    "height": 182.96,
    "x": 0.0,
    "y": 571.6
  }
]
