packages/wasm/src/tests/snapshots/wasm__tests__partition__clean_tight_loose_lists_chunks.snap
---
source: packages/wasm/src/tests/partition.rs
expression: summarize(&render.chunks)
---
[
  {
    "range": [
      0,
      11
    ],
    "items": 10,
    "width": 102.64,
    "height": 21.12,
    "x": 0.0,
    "y": 0.0
  },
  {
    "range": [
      12,
      23
    ],
    "items": 5,
    "width": 84.45,
    "height": 15.06,
    "x": 18.35,
    "y": 27.33
  },
  {
    "range": [
      24,
      37
    ],
    "items": 6,
    "width": 103.49,
    "height": 15.06,
    "x": 18.35,
    "y": 50.45
  },
  {
    "range": [
      39,
      83
    ],
    "items": 18,
    "width": 277.04,
    "height": 55.04,
    "x": 17.6,
    "y": 113.6
  },
  {
    "range": [
      85,
      96
    ],
    "items": 14,
    "width": 83.84,
    "height": 11.84,
    "x": 18.96,
    "y": 216.64
  }
]
