packages/wasm/src/tests/snapshots/wasm__tests__partition__clean_unicode_chunks.snap
---
source: packages/wasm/src/tests/partition.rs
expression: summarize(&render.chunks)
---
[
  {
    "range": [
      0,
      30
    ],
    "items": 13,
    "width": 46.8,
    "height": 131.6,
    "x": 0.0,
    "y": 0.0
  },
  {
    "range": [
      32,
      59
    ],
    "items": 20,
    "width": 34.96,
    "height": 437.28,
    "x": 0.0,
    "y": 150.8
  },
  {
    "range": [
      61,
      105
    ],
    "items": 8,
    "width": 82.96,
    "height": 159.84,
    "x": 0.0,
    "y": 607.28
  },
  {
    "range": [
      107,
      137
    ],
    "items": 10,
    "width": 71.76,
    "height": 113.6,
    "x": -4.24,
    "y": 786.32
  },
  {
    "range": [
      139,
      164
    ],
    "items": 11,
    "width": 56.8,
    "height": 149.6,
    "x": 0.0,
    "y": 919.12
  }
]
