packages/wasm/src/tests/snapshots/wasm__tests__partition__recovery_math_broken_ident_diagnostics.snap
---
source: wasm/src/tests/partition.rs
expression: render.diagnostics
---
[
  {
    "range": {
      "start": 11,
      "end": 21
    },
    "severity": "error",
    "message": "unknown variable: notdefined",
    "hints": [
      "if you meant to display multiple letters as is, try adding spaces between each letter: `n o t d e f i n e d`",
      "or if you meant to display this as text, try placing it in quotes: `\"notdefined\"`"
    ]
  }
]
