packages/wasm/src/tests/snapshots/wasm__tests__partition__recovery_math_empty_quotes_chunks.snap
---
source: wasm/src/tests/partition.rs
expression: summarize(&render.chunks)
---
[
  {
    "range": [
      0,
      7
    ],
    "items": 4,
    "width": 63.76,
    "height": 21.12,
    "x": 0.0,
    "y": 0.0
  },
  {
    "range": [
      18,
      34
    ],
    "items": 3,
    "width": 92.56,
    "height": 44.24,
    "x": 0.0,
    "y": 120.32
  }
]
