packages/wasm/src/tests/snapshots/wasm__tests__partition__recovery_math_empty_sub_diagnostics.snap
---
source: wasm/src/tests/partition.rs
expression: render.diagnostics
---
[
  {
    "range": {
      "start": 17,
      "end": 18
    },
    "severity": "warning",
    "message": "empty math attachment; inserted `#none`",
    "hints": []
  }
]
